--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -13,6 +13,8 @@
 		<strong>This tutorial has been put together by Dom.</strong><br />
 	</div>
 	
+	<p>Visits: {{ visits }}</p>
+	
 	<div>
 		<img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 		<img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
